2012-07-18  JMB  Mac build updates, better language detection, install docs

    Updated the Mac build scripts to reflect Apple's current recommendations
    and the realities of compiling on Lion with Xcode 4.  Also updated the
    code for selecting the UI language to display based on changes in Qt 4.8
    which do a better job at providing the correct language settings from the
    system.  Updated the translation files to include phrases recently added
    to the Qt framework.

    Also broke out the platform-specific sections of the INSTALL file into
    their own files, which should make it easier to understand the build
    instructions.

2012-06-18  JMB  Added Slovak UI translation

    Added a Slovak translation of the user interface (provided by Slavko).

2012-06-17  JMB  Updated .desktop file for Linux packaging

    Removed the deprecated "Encoding" key to comply with the current
    specification.

2012-02-04  JMB  Fixed condition editor operators for sequence fields

    Fixed a bug where the condition editor used the list of string-type
    operators for sequence fields rather than the numeric ones.

2011-02-02  JMB  Improved help pages, updated man page

    Changed the help content from a monolithic HTML page in a modal dialog
    to an easily-navigated set of smaller pages with search functionality,
    launched in the system's default browser.  Updated the man page to include
    HTML export capability.

2011-01-16  JMB  Faster "delete rows in filter", organized copyright info

    Improved the speed of deleting all rows in the current filter.  Updated
    the copyright file for the Debian package to conform to current standards
    and fully describe the copyright and licensing of all files in the source
    distribution.

2011-01-15  JMB  Allow HTML export from the command line, fixed XML import bug

    Allow export to HTML to be done from the command line just like exporting